# data-policy-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.agent/: PROJECT.md  SESSION.md  onboarding.complete
admin/: .dockerignore  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
admin/app/: globals.css  layout.tsx
admin/components/: ai-privacy-badge.tsx  ai-privacy-footnote.tsx  ai-source-references.tsx  ai-tracing-footnote.tsx  classify-form.tsx  console-shell.tsx  dsar-audit-forms.tsx  enforce-form.tsx  evaluate-form.tsx  (+26 more)
clients/: README.md
config/: gdpr_customer.yaml  gdpr_pii_classification.yaml
docs/: ARCHITECTURE.md
drpe/: __init__.py
openapi/: openapi.json
postman/: DRPE.local.postman_environment.json  DRPE.postman_collection.json
scripts/: build-backend.sh  deploy-admin.sh  docker-build.sh  export_openapi.py  generate_clients.sh
tasks/: plan.md  todo.md
tests/: test_api.py  test_catalog_api.py  test_catalog_stores.py  test_celery_redis_pool.py  test_classifier.py  test_dsar.py  test_dsar_api.py  test_dsar_stores.py  test_dsl_parser.py  test_enforce_api.py  test_enforcement.py  test_enforcement_stores.py  test_evaluator.py  test_grace_holds_api.py  test_memory_store.py  test_operators.py  test_policy_diff.py  test_policy_versions_api.py  test_privacy_mask.py  test_redis_cache.py  test_redis_client.py  test_sdk.py  test_sqlalchemy_store.py  test_webhook_api.py  test_webhook_stores.py
(+799 files in other folders)
